fix wrapping issue in prism css

--- a/assets/built/prism.css
+++ b/assets/built/prism.css
@@ -13,7 +13,7 @@ pre[class*="language-"] {
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	font-size: 1em;
 	text-align: left;
-	white-space: pre;
+	white-space: pre-wrap;
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
@@ -33,7 +33,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
 	position: relative;
 	margin: .5em 0;
-	overflow: hidden;
+	overflow: visible;
 	padding: 0;
 }
 pre[class*="language-"]>code {
